# estudo_fem

./: README.md
multigrid/: Briggs - Cap 02.ipynb  Briggs_Cap_02.ipynb  Briggs_Cap_03.ipynb  Briggs_Cap_04.ipynb  Briggs_Cap_05.ipynb  Briggs_tutorial.ipynb  GaussSeidel.ipynb
multigrid/Grid/: .~lock.Caso 2x2.pptx#  Caso 2x2.pptx
multigrid/WeightedJacobi/: Geomecanica_Weighted_Jacobi.ipynb  caso01_1000el_dP_cresc.gdt_w_1_1_todos  caso01_1000el_dP_cresc.gdt_w_2_3_todos  caso10.gdt_w_1_1  caso10.gdt_w_2_3  pituba.gdt_w_1_1  pituba.gdt_w_2_3
multigrid/WeightedJacobi/.ipynb_checkpoints/: Geomecanica_Weighted_Jacobi-checkpoint.ipynb
petsc/: CMakeLists.txt  CriandoVetor.c  CriandoVetor.cpp  CriarMalha.cpp  Laplaciano.cpp  criar_malha_exemplo_7_3.py  fem.cpp  fem.h  fem_unittest.cpp  gerar_exemplos.sh  makefile  no.cpp  plot_sol.py
petsc/modelos/: exemplo1_nos.txt  exemplo2_nos.txt  exemplo3_elementos.txt  exemplo3_nos.txt  exemplo4_elementos.txt  exemplo4_nos.txt
python/: FEM.py  FEMTest.py
